--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,43 @@
 html, body {
   margin: 0px !important;
+  height: 100vh;
+  width: 100vw;
   position: relative;
   color: #f4f4f4 !important; }
+
+body {
+  background: url("../img/wood4.jpg"); }
 
 @font-face {
   src: url("../fonts/Quicksand-Medium.ttf");
   font-family: QS; }
-.nav-bar {
-  font-family: QS;
-  position: absolute;
-  width: 100%;
-  padding-top: 15px;
-  height: 45vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/bulb.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%; }
-  .nav-bar .nav-logo {
-    margin-left: 25px;
-    width: 125px;
-    height: 125px;
-    float: left; }
-    .nav-bar .nav-logo .crossroadslogo {
-      width: 100%;
-      height: 100%; }
-  .nav-bar .nav-links {
-    float: right;
-    cursor: pointer;
-    font-size: 20px; }
-    .nav-bar .nav-links div {
-      display: inline-block;
-      padding-right: 45px; }
-    .nav-bar .nav-links .nav-contact {
-      padding-right: 25px !important; }
-  .nav-bar .reviews {
-    text-align: center;
+.nav-logo {
+  margin-top: 75px;
+  margin-left: 20%;
+  margin-right: 5%;
+  width: 175px;
+  height: 175px;
+  float: left; }
+  .nav-logo .crossroadslogo {
     width: 100%;
-    font-size: 32px;
-    position: absolute;
-    z-index: 2;
-    top: 46%; }
-  .nav-bar div .active-rev {
-    display: block !important; }
-  .nav-bar div .review-quote {
-    display: none; }
-  .nav-bar .review-quote {
-    margin-left: 45px;
-    margin-right: 45px; }
+    height: 100%; }
 
-.carousel {
-  width: 90vh; }
+.nav-links {
+  margin-top: 155px;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 40px;
+  font-family: QS; }
+  .nav-links div {
+    display: inline-block;
+    margin-right: 25px;
+    margin-left: 25px; }
+
+.content {
+  margin-top: 85px;
+  margin-left: 20%;
+  width: 61%;
+  height: 60%;
+  background-color: rgba(0, 0, 0, 0.5); }
 
 /*# sourceMappingURL=styles.css.map */
