--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,13 @@
 html, body {
   margin: 0px !important;
+  height: 100vh;
+  width: 100vw;
   position: relative;
   color: #f4f4f4 !important;
+}
+
+body {
+  background: url('../img/wood4.jpg');
 }
 
 @font-face {
@@ -9,64 +15,37 @@ html, body {
   font-family: QS;
 }
 
-.nav-bar {
-  font-family: QS;
-  position: absolute;
-  width: 100%;
-  padding-top: 15px;
-  height: 45vh;
-  background:
-  linear-gradient(
-  rgba(0,0,0,0.5),
-  rgba(0,0,0,0.5)
-  ),
-  url("../img/bulb.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
 
-  .nav-logo {
-    margin-left: 25px;
-    width: 125px;
-    height: 125px;
-    float: left;
-    .crossroadslogo {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .nav-links {
-    float: right;
-    cursor: pointer;
-    font-size: 20px;
-    div {
-      display: inline-block;
-      padding-right: 45px;
-    }
-    .nav-contact {
-      padding-right: 25px !important;
-    }
-  }
-  .reviews {
-    text-align: center;
+.nav-logo {
+  margin-top: 75px;
+  margin-left: 20%;
+  margin-right: 5%;
+  width: 175px;
+  height: 175px;
+  float: left;
+  .crossroadslogo {
     width: 100%;
-    font-size: 32px;
-    position: absolute;
-    z-index: 2;
-    top: 46%;
-  }
-  div .active-rev {
-    display: block !important;
-  }
-  div .review-quote {
-    display: none;
-  }
-  .review-quote {
-    margin-left: 45px;
-    margin-right: 45px;
+    height: 100%;
   }
 }
 
-.carousel {
-  width: 90vh;
+.nav-links {
+  margin-top: 155px;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 40px;
+  font-family: QS;
+  div {
+    display: inline-block;
+    margin-right: 25px;
+    margin-left: 25px;
+  }
+}
+
+.content {
+  margin-top: 85px;
+  margin-left: 20%;
+  width: 61%;
+  height: 60%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
