--- a/css/styles.css
+++ b/css/styles.css
@@ -6,38 +6,70 @@ html, body {
   color: #f4f4f4 !important; }
 
 body {
-  background: url("../img/wood4.jpg"); }
+  background: url("../img/wood4.jpg");
+  text-align: center; }
 
 @font-face {
   src: url("../fonts/Quicksand-Medium.ttf");
   font-family: QS; }
+@font-face {
+  src: url("../fonts/Now-Regular.otf");
+  font-family: NR; }
 .nav-logo {
-  margin-top: 75px;
-  margin-left: 20%;
-  margin-right: 5%;
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 45px;
   width: 175px;
-  height: 175px;
-  float: left; }
+  height: 175px; }
   .nav-logo .crossroadslogo {
     width: 100%;
     height: 100%; }
 
 .nav-links {
-  margin-top: 155px;
+  width: 61%;
+  height: 40px;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.5);
   display: inline-block;
   cursor: pointer;
-  font-size: 40px;
-  font-family: QS; }
+  font-size: 35px;
+  font-family: NR;
+  text-shadow: 0px 0px 7px black; }
   .nav-links div {
     display: inline-block;
     margin-right: 25px;
     margin-left: 25px; }
 
 .content {
-  margin-top: 85px;
-  margin-left: 20%;
+  display: inline-block;
+  padding: 30px;
+  margin-top: 25px;
   width: 61%;
   height: 60%;
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: NR; }
+
+.content-page {
+  display: none; }
+
+.active {
+  display: block !important; }
+
+.home {
+  width: 100%;
+  height: 100%; }
+  .home .home-header {
+    text-align: center;
+    font-size: 60px;
+    margin-bottom: 30px; }
+  .home img {
+    display: inline-block;
+    width: 30%; }
+  .home .home-text {
+    float: right;
+    font-size: 23px;
+    font-family: QS;
+    display: inline-block;
+    width: 65%; }
 
 /*# sourceMappingURL=styles.css.map */
