--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,7 @@ html, body {
 
 body {
   background: url('../img/wood4.jpg');
+  text-align: center;
 }
 
 @font-face {
@@ -15,14 +16,17 @@ body {
   font-family: QS;
 }
 
+@font-face {
+  src: url('../fonts/Now-Regular.otf');
+  font-family: NR;
+}
 
 .nav-logo {
-  margin-top: 75px;
-  margin-left: 20%;
-  margin-right: 5%;
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 45px;
   width: 175px;
   height: 175px;
-  float: left;
   .crossroadslogo {
     width: 100%;
     height: 100%;
@@ -30,11 +34,15 @@ body {
 }
 
 .nav-links {
-  margin-top: 155px;
+  width: 61%;
+  height: 40px;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.5);
   display: inline-block;
   cursor: pointer;
-  font-size: 40px;
-  font-family: QS;
+  font-size: 35px;
+  font-family: NR;
+  text-shadow: 0px 0px 7px rgba(0, 0, 0, 9);
   div {
     display: inline-block;
     margin-right: 25px;
@@ -43,9 +51,40 @@ body {
 }
 
 .content {
-  margin-top: 85px;
-  margin-left: 20%;
+  display: inline-block;
+  padding: 30px;
+  margin-top: 25px;
   width: 61%;
   height: 60%;
   background-color: rgba(0, 0, 0, 0.5);
+  font-family: NR;
+}
+
+.content-page {
+  display: none;
+}
+
+.active {
+  display: block !important;
+}
+
+.home {
+  width: 100%;
+  height: 100%;
+  .home-header{
+    text-align: center;
+    font-size: 60px;
+    margin-bottom: 30px;
+  }
+  img {
+    display: inline-block;
+    width: 30%;
+  }
+  .home-text {
+    float: right;
+    font-size: 23px;
+    font-family: QS;
+    display: inline-block;
+    width: 65%;
+  }
 }
