--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,10 +21,18 @@ body {
   font-family: NR;
 }
 
+.side-bar {
+  float: left;
+  height: 100%;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.9);
+  text-align: center;
+}
+
 .nav-logo {
-  display: block;
-  margin-top: 30px;
-  margin-bottom: 45px;
+  display: inline-block;;
+  margin-top: 40px;
+  margin-bottom: 40px;
   width: 175px;
   height: 175px;
   .crossroadslogo {
@@ -34,57 +42,15 @@ body {
 }
 
 .nav-links {
+  display: inline-block;
   width: 61%;
   height: 40px;
   padding: 30px;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: inline-block;
   cursor: pointer;
-  font-size: 35px;
+  font-size: 20px;
   font-family: NR;
   text-shadow: 0px 0px 7px rgba(0, 0, 0, 9);
   div {
-    display: inline-block;
-    margin-right: 25px;
-    margin-left: 25px;
-  }
-}
-
-.content {
-  display: inline-block;
-  padding: 30px;
-  margin-top: 25px;
-  width: 61%;
-  height: 60%;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-family: NR;
-}
-
-.content-page {
-  display: none;
-}
-
-.active {
-  display: block !important;
-}
-
-.home {
-  width: 100%;
-  height: 100%;
-  .home-header{
-    text-align: center;
-    font-size: 60px;
-    margin-bottom: 30px;
-  }
-  img {
-    display: inline-block;
-    width: 30%;
-  }
-  .home-text {
-    float: right;
-    font-size: 23px;
-    font-family: QS;
-    display: inline-block;
-    width: 65%;
+    margin-bottom: 50px;
   }
 }
